tests/integration/formats/errors/xpath-invalid-check.txt
xpath: error: Parse error
1 | //class[bad=(
                 ^

1 fatal
